<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Delivery">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:paddingBottom="30dp"
        android:paddingTop="150dp"
        android:paddingLeft="90dp"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:src="@drawable/main_logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/infoDelivery1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/infoDelivery2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="30dp"
        android:text="@string/infoDelivery3" />





</LinearLayout>