<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PayForm">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/ll_footer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">



            <TextView
                android:id="@+id/text_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/checkout_total"
                android:textColor="#8BC34A"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_card_number"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/numberCard"
                android:drawableRight="@drawable/ic_credit_card_black_24dp"
                android:inputType="phone"
                android:padding="16dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <EditText
                    android:id="@+id/edit_card_date"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:drawableRight="@drawable/ic_date_range_black_24dp"
                    android:hint="@string/checkout_card_date"
                    android:inputType="date"
                    android:padding="16dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                     />

                <EditText
                    android:id="@+id/edit_card_cvc"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:hint="@string/checkout_card_cvc"
                    android:drawableRight="@drawable/ic_lock_black_24dp"
                    android:inputType="number"
                    android:padding="16dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    />
            </LinearLayout>

            <EditText
                android:id="@+id/edit_card_holder_name"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/checkout_card_holder"
                android:drawableRight="@drawable/ic_person_black_24dp"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                />

            <Button
                android:id="@+id/button_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/colorAccent"
                android:text="@string/checkout_payment"
                android:textColor="@android:color/white" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp">

            </FrameLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_footer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>