
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="#3763BD"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textColor="#ffffff"
            android:text="@string/Contacts"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/promo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="#3763BD"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textColor="#ffffff"
            android:text="@string/Promo"
            app:layout_constraintTop_toBottomOf="@id/contact"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/delivery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="#3763BD"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textColor="#ffffff"
            android:text="@string/Dostavka"
            app:layout_constraintTop_toBottomOf="@id/promo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>




</RelativeLayout>